# limchat-server

./: .gitignore  CMakeLists.txt  README.md  Server.md
ChatServer/: CMakeLists.txt  ChatServer.cc  ChatServer.md
ChatServer/base/: CMakeLists.txt
ChatServer/base/include/: LogFile.h  Logger.h  Timestamp.h
ChatServer/base/src/: Condition.cc  FileUtil.cc  Thread.cc
ChatServer/include/: CServer.h  CSession.h  IOServicePool.h  LogicNode.h  LogicSystem.h  MsgNode.h  MysqlConnection.h  MysqlDao.h  MysqlMgr.h  RedisConPool.h  RedisMgr.h  UserMgr.h  const.h
ChatServer/src/: CServer.cc  CSession.cc  IOServicePool.cpp  LogicSystem.cc  MysqlDao.cc  MysqlMgr.cc  MysqlPool.cc  RedisMgr.cc  UserMgr.cc
GateServer/: CMakeLists.txt  GateServer.cc  GateServer.md
GateServer/base/include/: AsyncLogging.h  CurrentThread.h  FileUtil.h  Noncopyable.h
GateServer/base/src/: AsyncLogging.cc  LogFile.cc  LogStream.cc  Timestamp.cc
GateServer/include/: CServer.h  Defer.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  MysqlPool.h  RedisConPool.h  RedisConnection.h  StatusGrpcClient.h  VerifyGrpcClient.h  const.h
GateServer/src/: CServer.cc  ConfigMgr.cc  HttpConnection.cc  LogicSystem.cc  MysqlDao.cc  MysqlMgr.cc  MysqlPool.cc  RedisConPool.cc  RedisMgr.cc
StatusServer/: CMakeLists.txt  StatusServer.cc
StatusServer/base/include/: Condition.h  CountDownLatch.h  FixedBuffer.h  LogStream.h  MutexLock.h  Thread.h
StatusServer/base/src/: CountDownLatch.cc  CurrentThread.cc  LogFile.cc  Logger.cc
StatusServer/include/: ConfigMgr.h  RedisMgr.h  Singleton.h  StatusServiceImpl.h  const.h
StatusServer/src/: ConfigMgr.cc  RedisConPool.cc  StatusServiceImpl.cc
VerifyServer/: const.js  package-lock.json  package.json  redis.js  test_client.js  verify_server.js
proto/: status.proto  verify.proto
